eks/k8s/shared/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: users-ms
  labels:
    app.kubernetes.io/part-of: travelhub
---
apiVersion: v1
kind: Namespace
metadata:
  name: login-handler-ms
  labels:
    app.kubernetes.io/part-of: travelhub
